fixed some contrast stuff on cashier side

--- a/employee/src/components/drinkPopup/drinkCustomize.scss
+++ b/employee/src/components/drinkPopup/drinkCustomize.scss
@@ -71,7 +71,7 @@
 .customize, .low{
     width: 50vw;
     height: 90vh;
-    background-color: var(--GREEN-MED60);
+    background-color: var(--GREEN-MED);
     left: 20vw;
     position: absolute;
     top: 2vh;
